hphp/hack/test/extended_reasons/fn_call.php.exp
error: Typing[4110] Invalid argument [1]
-> Expected string [2]
-> But got int [3]
-> Here's why: this hint [3]
-> flows into this expression [4]
-> which itself flows into this expression [1]
-> which itself flows into this expression [1]
-> which itself flows into this expression, via the (contravariant) 1st function parameter [5]
-> which itself flows from this declaration [6]
-> which itself flows into this hint, via the (contravariant) 1st function parameter [2]

fn_call.php:6:7
      1 | <?hh
      2 | 
[2,6] 3 | function foo(string $_, int $_, arraykey... $_): void {}
      4 | 
[3,4] 5 | function bar(string $x, int $y ): void{
[1,5] 6 |   foo($y, $x, 1, 'a', true);
      7 | }
      8 | 

error: Typing[4110] Invalid argument [1]
-> Expected int [2]
-> But got string [3]
-> Here's why: this hint [3]
-> flows into this expression [4]
-> which itself flows into this expression [1]
-> which itself flows into this expression [1]
-> which itself flows into this expression, via the (contravariant) 2nd function parameter [5]
-> which itself flows from this declaration [6]
-> which itself flows into this hint, via the (contravariant) 2nd function parameter [2]

fn_call.php:6:11
      1 | <?hh
      2 | 
[2,6] 3 | function foo(string $_, int $_, arraykey... $_): void {}
      4 | 
[3,4] 5 | function bar(string $x, int $y ): void{
[1,5] 6 |   foo($y, $x, 1, 'a', true);
      7 | }
      8 | 

error: Typing[4110] Invalid argument [1]
-> Expected arraykey (variadic argument) [2]
-> But got bool [1]
-> Here's why: this expression [1]
-> flows into this expression [1]
-> which itself flows into this expression, via the (contravariant) 5th function parameter [3]
-> which itself flows from this declaration [4]
-> which itself flows into this variadic parameter declaration, via the (contravariant) 3rd function parameter [2]

fn_call.php:6:23
      1 | <?hh
      2 | 
[2,4] 3 | function foo(string $_, int $_, arraykey... $_): void {}
      4 | 
      5 | function bar(string $x, int $y ): void{
[1,3] 6 |   foo($y, $x, 1, 'a', true);
      7 | }
      8 | 

error: Typing[4110] Invalid argument [1]
-> Expected string [2]
-> But got int [3]
-> Here's why: this hint [3]
-> flows into this expression [4]
-> which itself flows into this expression [1]
-> which itself flows into this expression [1]
-> which itself flows into this expression, via the (contravariant) 1st function parameter [5]
-> which itself flows from this declaration [6]
-> which itself flows into this hint, via the (contravariant) 1st function parameter [2]

fn_call.php:15:7
       3 | function foo(string $_, int $_, arraykey... $_): void {}
       4 | 
[2,6]  5 | function bar(string $x, int $y ): void{
       6 |   foo($y, $x, 1, 'a', true);
       7 | }
         :
      11 | }
      12 | 
[3,4] 13 | function baz(int $x): void {
      14 |   $y = qux();
[1,5] 15 |   bar($x, $y);
      16 | }

error: Typing[4110] Invalid argument [1]
-> Expected int [2]
-> But got string [3]
-> Here's why: this hint [3]
-> flows into this expression [4]
-> which itself flows into this expression [5]
-> which itself flows into this expression [1]
-> which itself flows into this expression [1]
-> which itself flows into this expression, via the (contravariant) 2nd function parameter [6]
-> which itself flows from this declaration [7]
-> which itself flows into this hint, via the (contravariant) 2nd function parameter [2]

fn_call.php:15:11
       3 | function foo(string $_, int $_, arraykey... $_): void {}
       4 | 
[2,7]  5 | function bar(string $x, int $y ): void{
       6 |   foo($y, $x, 1, 'a', true);
       7 | }
       8 | 
[3]    9 | function qux(): string {
      10 |   return 'a';
      11 | }
      12 | 
      13 | function baz(int $x): void {
[4,5] 14 |   $y = qux();
[1,6] 15 |   bar($x, $y);
      16 | }

5 errors found.
